[package]
name = "gameboy_emulator"
version = "0.2.4"
authors = ["Benjamin Konz <benkonz@protonmail.com>","Nicholas Alexeev <scifi6546@protonmail.com"]
edition = "2018"

[dependencies]

[target.wasm32-unknown-unknown.dependencies]
gameboy_opengl_web = { path = "gameboy_opengl_web", version = "0.2.4" }
stdweb = "0.4"

serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_derive = "1.0.0"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gameboy_opengl = { path = "gameboy_opengl", version = "0.2.4" }

[workspace]

[lib]
name = "gameboy_lib"
crate-type = ["cdylib"]
