[package]
name = "gameboy_opengl"
version = "0.2.3"
authors = ["Ben Konz <benkonz@protonmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/benkonz/gameboy_emulator"
description = "Native Gameboy emulator written in Rust!"
edition = "2018"

[[bin]]
name = "gameboy_emulator"

[dependencies]
gameboy_core = { path = "../gameboy_core", version = "0.2.8" }
clap = "2.33"
directories = "2.0"
gl = "0.14.0"

[dependencies.sdl2]
version = "0.33.0"
features = ["bundled", "static-link"]