[package]
name = "gameboy_opengl"
version = "0.2.7"
authors = ["Ben Konz <benkonz@protonmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/benkonz/gameboy_emulator"
description = "Native Gameboy emulator written in Rust!"
edition = "2018"

[[bin]]
name = "gameboy_emulator"

[dependencies]
gameboy_core = { path = "../gameboy_core", version = "0.3.2" }
clap = "2.33"
directories = "2.0"

[dependencies.sdl2]
version = "0.34.0"
features = ["bundled", "static-link"]