[package]
name = "gameboy_opengl_web"
version = "0.2.2"
authors = ["Ben Konz <benkonz@protonmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/benkonz/gameboy_emulator"

[dependencies]
stdweb = "0.4"
serde = "1.0"
serde_derive = "1.0"
stdweb-derive = "0.5"
gameboy_core = { path = "../gameboy_core", version = "0.2.8" }

[build-dependencies]
webgl_generator = "0.2"
